# cogvault

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
assets/: brand.py
src/cogvault/: __init__.py  cli.py  core.py  mcp_server.py  obs.py
tests/: test_core.py
