[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogvault"
version = "0.6.0"
description = "Fleet-grade local memory for AI agents over plain Markdown — hybrid search, multi-tenant, one process, no cloud, no Docker, no LLM."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Nick Bibikov" }]
keywords = ["ai", "agent", "memory", "mcp", "markdown", "sqlite", "embeddings",
            "hybrid-search", "local-first", "claude", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sqlite-vec>=0.1.6",
    "fastembed>=0.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cogvault = "cogvault.cli:main"

[project.urls]
Homepage = "https://github.com/NBibikov/cogvault"
Repository = "https://github.com/NBibikov/cogvault"

[tool.hatch.build.targets.wheel]
packages = ["src/cogvault"]
